2013-02-05  Roger Fong  <roger_fong@apple.com>

        Add a JavaScriptCore Export Generator project.
        https://bugs.webkit.org/show_bug.cgi?id=108971.

        Reviewed by Brent Fulgham.

        * WebKit.vcxproj/WebKit.sln:

2013-02-05  Roger Fong  <roger_fong@apple.com>

        Unreviewed. Delete some errant preprocessor definitions.

        * WebKit.vcxproj/WebKit/WebKitCommon.props:

2013-02-05  Roger Fong  <roger_fong@apple.com>

        VS2010 WebKit projects, scripts, and property sheets.
        https://bugs.webkit.org/show_bug.cgi?id=106989.

        Reviewed by Brent Fulgham.

        * WebKit.vcxproj/Interfaces: Added.
        * WebKit.vcxproj/Interfaces/FixMIDLHeaders.pl: Copied from win/WebKit.vcproj/FixMIDLHeaders.pl.
        * WebKit.vcxproj/Interfaces/Interfaces.vcxproj: Added.
        * WebKit.vcxproj/Interfaces/Interfaces.vcxproj.filters: Added.
        * WebKit.vcxproj/Interfaces/Interfaces.vcxproj.user: Added.
        * WebKit.vcxproj/Interfaces/InterfacesCommon.props: Added.
        * WebKit.vcxproj/Interfaces/InterfacesDebug.props: Added.
        * WebKit.vcxproj/Interfaces/InterfacesPostBuild.cmd: Added.
        * WebKit.vcxproj/Interfaces/InterfacesPreBuild.cmd: Added.
        * WebKit.vcxproj/Interfaces/InterfacesRelease.props: Added.
        * WebKit.vcxproj/WebKit: Added.
        * WebKit.vcxproj/WebKit.sln:
        * WebKit.vcxproj/WebKit/WebKit.vcxproj: Added.
        * WebKit.vcxproj/WebKit/WebKit.vcxproj.filters: Added.
        * WebKit.vcxproj/WebKit/WebKit.vcxproj.user: Added.
        * WebKit.vcxproj/WebKit/WebKitApple.props: Added.
        * WebKit.vcxproj/WebKit/WebKitCFLite.props: Added.
        * WebKit.vcxproj/WebKit/WebKitCommon.props: Added.
        * WebKit.vcxproj/WebKit/WebKitDebug.props: Added.
        * WebKit.vcxproj/WebKit/WebKitDirectX.props: Added.
        * WebKit.vcxproj/WebKit/WebKitPostBuild.cmd: Added.
        * WebKit.vcxproj/WebKit/WebKitPreBuild.cmd: Added.